# photomator_photos_sync

./: .gitignore  CONTRIBUTING.md  Makefile  PhotomatorFlagSync.spec  README.md  app.py  app_state.json  pyproject.toml  sync-github.command
.github/workflows/: quality.yml
core/: app_state.py  config.py  error_handling.py  flag_parsing.py  main_window.py  models.py  photos_bridge.py  scan_logic.py  styles.py  workers.py
docs/: behavior-baseline.md  release-checklist.md
packaging/: PhotomatorFlagSync.spec
scripts/: build-app.sh  build-installer.sh  run-app.sh
tests/: duplicate_matching_check.py  flag_parsing_check.py  smoke_check.py
