[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "photomator-flag-sync"
version = "0.1.0"
description = "Basic PySide6 utility to import flagged Photomator-sidecar images into Apple Photos"
requires-python = ">=3.11"
dependencies = [
    "Pillow",
    "PySide6",
    "pyobjc-core",
    "pyobjc-framework-Cocoa",
    "pyobjc-framework-Photos",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "ruff",
]

[tool.setuptools]
packages = ["core"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
